# demas_a5_v05

./: .gitignore  README.md  pyproject.toml
config/: instances_i0.yaml
docs/: PRD.md  i0_validation.md  plan.md
poc/: README.md  credentials.txt  poc_agent.py  requirements.txt
poc/data/swe_bench_lite/dev/: cache-c5cc008cba123bd0.arrow
poc/docs/: codex_agent_instructions.md
src/demas/: agent.py  cli.py  commands.py  config.py  i0.py  llm.py  secrets.py
